// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing addKungFuTechnique should not add duplicate techniques 1`] = `
Object {
  "KUNGFU_EXTERNAL": Object {
    "Blossom Harvest": Array [
      "Heart-Fire Temper Skill",
      "Iron Skin",
      "Iron Skin 2",
      "Nine Mountains Great Strength",
      "No Vermin in the World",
    ],
    "Bone-Fed Wolf Fang": Array [
      "Circling Pack",
      "Fighting With Fire",
      "March Towards Hell",
      "Rainfall at Night",
      "Wolves Devour the Lion",
    ],
  },
  "KUNGFU_INTERNAL": Object {
    "Boundless Prosperity Manual": Array [
      "Retain Balanced Nature",
    ],
    "Fire Sutra": Array [
      "Thought of Flame",
    ],
  },
  "noRestrictionInternal": Array [],
}
`;

exports[`Testing createState should create an empty state 1`] = `
Object {
  "KUNGFU_EXTERNAL": Object {},
  "KUNGFU_INTERNAL": Object {},
  "noRestrictionInternal": Array [],
}
`;

exports[`Testing getExternalKungFuStatistics should return modified statistics for a style with techniques 1`] = `
Object {
  "block": 5,
  "damage": 10,
  "footwork": 0,
  "speed": 5,
  "strike": 10,
  "toughness": 15,
}
`;

exports[`Testing getExternalKungFuStatistics should return modified statistics for a style with techniques 2`] = `
Object {
  "block": 5,
  "damage": 10,
  "footwork": 5,
  "speed": 5,
  "strike": 5,
  "toughness": 5,
}
`;
